# MyExtension

./: .gitignore  LICENSE  NATIVE_DEPENDENCIES.md  README.md  SConstruct  build.bat  download-godot.bat  methods.py  package-extension.bat  set-version.bat  setup-firebase.bat  show-version.bat  test-extension.bat  update-entry-symbol.bat
.github/workflows/: build.yml
android/: CMakeLists.txt  build.gradle
libs/: README.md
libs/android/arm64/: README.md
libs/windows/x86_64/: README.md
libs/windows/x86_64/include/firebase/: version.h
project/: icon.svg.import  project.godot
project/addons/myextension/: myextension.gdextension  myextension.gdextension.uid  plugin.cfg
project/config/: firebase_config.tres  firebase_config_dev.tres  firebase_config_prod.tres
project/demo/: main.gd  main.tscn  test.gd  test.gd.uid  test.tscn
src/: firebase_app_options.cpp  firebase_app_options.hpp  firebase_app_options_resource.cpp  firebase_app_options_resource.hpp  firebase_wrapper.cpp  firebase_wrapper.hpp  my_extension.cpp  my_extension.h  my_node.cpp  my_node.hpp  my_singleton.cpp  my_singleton.hpp  register_types.cpp  register_types.h
